# vue-fft-visualizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vite.config.ts
backend-examples/nodejs/: README.md  fft-server.js  package-lock.json  package.json
backend-examples/python/: README.md  fft-server.service  fft_server.py  fft_server_pi.py  fft_server_pi_debug.py  requirements.txt  test_client.html
backend-examples/rust/: Cargo.toml  README.md
backend-examples/rust/src/: main.rs
playground/: App.vue
src/: index.ts  wasm.ts
src/components/: AuroraVisualizer.vue  BlobVisualizer.vue  FFTVisualizer.vue  MyceliumVisualizer.vue
src/composables/: useLocalAudio.ts  useWebSocketFft.ts
wasm/: Cargo.toml
wasm/pkg/: fft_wasm.d.ts  fft_wasm.js  fft_wasm_bg.js  fft_wasm_bg.wasm  fft_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
