[package]
name = "fft-server"
version = "0.1.0"
edition = "2021"
description = "FFT WebSocket server for vue-fft-visualizer"

[dependencies]
cpal = "0.15"
rustfft = "6.1"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
